--- a/gui/components/TestPage.xaml
+++ b/gui/components/TestPage.xaml
@@ -1,9 +1,8 @@
-﻿<Grid x:Class="dfbanka.gui.pages.TestPage"
+﻿<Grid x:Class="dfbanka.gui.components.TestPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:dfbanka.gui.pages"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Name="Testování">
