--- a/gui/components/TestPage.xaml
+++ b/gui/components/TestPage.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="dfbanka.gui.components.TestPage"
+﻿<StackPanel x:Class="dfbanka.gui.components.TestPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -17,9 +17,7 @@
                 Grid.Row="0"
                 Click="BtnGetJson_Click"
                 Content="Get WP json" />
-
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions>
-</Grid>
+    <Button x:Name="BtnPutOrder"
+            Click="BtnPutOrder_Click"
+            Content="Update order" />
+</StackPanel>
