--- a/gui/components/Menu.xaml
+++ b/gui/components/Menu.xaml
@@ -1,35 +1,31 @@
 ﻿<UserControl x:Class="dfbanka.gui.components.Menu"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:dfbanka.gui.components"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Foreground="White">
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="200" Foreground="White">
+    <UserControl.Resources>
+        <Style x:Name="icon" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Consolas" />
+            <Setter Property="FontSize" Value="32" />
+            <Setter Property="LineHeight" Value="38" />
+            <Setter Property="LineStackingStrategy" Value="BlockLineHeight" />
+            <Setter Property="Width" Value="41" />
+            <Setter Property="TextAlignment" Value="Center" />
+            <Setter Property="FontWeight" Value="Thin" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="FontWeight" Value="Bold" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
     <StackPanel>
         <TextBlock Text="&#x2699;"
-                   FontSize="32"
-                   FontWeight="Thin"
-                   FontFamily="Consolas"
-                   LineStackingStrategy="BlockLineHeight"
-                   LineHeight="38"
-                   Width="42" TextAlignment="Center"
-                   Foreground="Red"/>
-        <TextBlock Text="&#x1F464;"
-                   FontSize="32"
-                   FontWeight="Bold"
-                   FontFamily="Consolas"
-                   LineStackingStrategy="BlockLineHeight"
-                   LineHeight="38"
-                   Width="43"
-                    TextAlignment="Center"/>
-        <TextBlock Text="&#x1f511;"
-                   FontSize="32"
-                   FontWeight="Bold"
-                   FontFamily="Consolas"
-                   LineStackingStrategy="BlockLineHeight"
-                   LineHeight="38"
-                   Width="43"
-                    TextAlignment="Center"/>
+                   Foreground="Red" />
+        <TextBlock Text="&#x1F464;" />
+        <TextBlock Text="&#x1f511;" />
     </StackPanel>
 </UserControl>
