--- a/gui/components/OrdersPage.xaml
+++ b/gui/components/OrdersPage.xaml
@@ -4,12 +4,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:l="clr-namespace:dfbanka.gui"
+        xmlns:cmp="clr-namespace:dfbanka.gui.components"
         mc:Ignorable="d"
         d:DesignHeight="450" d:DesignWidth="800"
         x:Name="Objednávky">
 
-    <DataGrid ItemsSource="{Binding Orders.Values}"
-              AutoGenerateColumns="False">
+    <DataGrid ItemsSource="{Binding Orders}"
+              AutoGenerateColumns="False"
+              IsReadOnly="True" Margin="1,0,-1,0">
+        <DataGrid.Resources>
+            <ContextMenu x:Key="ticketContextMenu"
+                         ItemsSource="{x:Static cmp:OrdersPage.Statuses}"
+                         MenuItem.Click="ContextMenu_Click"
+                         DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
+            </ContextMenu>
+        </DataGrid.Resources>
+        <DataGrid.RowStyle>
+            <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
+                <Setter Property="ContextMenu" Value="{StaticResource ticketContextMenu}" />
+            </Style>
+        </DataGrid.RowStyle>
         <DataGrid.Columns>
             <DataGridTextColumn Header="Id"
                                 Binding="{Binding Id}" />
